syntax = "proto3";

option java_multiple_files = true;
option java_package = "micronaut.example";
option java_outer_classname = "GrpcGraal";
option objc_class_prefix = "HLW";

package micronaut.example;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
